--- a/prefeituramedianeira.html
+++ b/prefeituramedianeira.html
@@ -121,6 +121,13 @@
         <button type="submit" class="botaoNoticias">Mais Noticias...</button>
 
     </a>       
+    <section class="rodape">
+        <div>
+            <img src="https://www.medianeira.pr.gov.br/imagens/iptu2021_canto.png" href="https://www.medianeira.pr.gov.br/imagens/iptu2021_canto.png" class="imgbanners" id="imgbanner1">
+            <img src="https://www.medianeira.pr.gov.br/imagens/eventos_canto2024.jpg" href="https://www.medianeira.pr.gov.br/?calendario" class="imgbanners">
+            <img src="https://www.medianeira.pr.gov.br/imagens/ipremed_logo.jpg" href="https://www.ipremed.com.br/" class="imgbanners">
+        </div>
+    </section>
     <script src="mobile-navbar.js"></script>
 </body>
 </html>
